# purescript-alexandrite

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRDPARTY.toml  install.ps1  install.sh  justfile
compiler-bin/: Cargo.toml
compiler-bin/src/: cli.rs  docs.rs  lib.rs  logging.rs  lsp.rs  walk.rs
compiler-bin/src/docs/: error.rs  location.rs  schema.rs  warm.rs
compiler-bin/src/lsp/: build.rs  capabilities.rs  command.rs  error.rs  event.rs  formatting.rs
compiler-core/documenting/: Cargo.toml
compiler-core/documenting/benches/: documenting.rs
compiler-core/documenting/src/: algorithm.rs  annotation.rs  lib.rs
compiler-core/elaborating/: Cargo.toml
compiler-core/elaborating/src/: core.rs  elaborate.rs  evidence.rs  lib.rs
compiler-core/syntax/: Cargo.toml
compiler-core/syntax/src/: ast.rs  cst.rs  lib.rs  tree.rs
compiler-core/syntax/src/cst/: macros.rs
compiler-lsp/documentation/: Cargo.toml
compiler-lsp/documentation/src/: error.rs  lib.rs  render.rs  schema.rs  typescript.rs  warm.rs
tests-compatibility/: Cargo.toml  build.rs
tests-compatibility/benches/: checking_multi_core.rs  checking_single_core.rs  diagnostics_positions.rs  indexing.rs  lowering_resolving.rs  parsing.rs  stabilizing.rs
tests-compatibility/src/: lib.rs  main.rs  package_cache.rs  registry.rs  verifier.rs
tests-compatibility/src/registry/: reader.rs
tests-compatibility/src/verifier/: cli.rs  compile.rs  error.rs  report.rs  selection.rs  sources.rs
tests-compatibility/tests/: parsing.rs
tests-integration/: Cargo.toml
tests-integration/fixtures/checking/1771860360_foreign_check/: Main.snap
tests-integration/fixtures/checking/1771860420_foreign_recursive/: Main.snap
tests-integration/fixtures/checking/1771864260_newtype_check/: Main.snap
tests-integration/fixtures/checking/1771864320_newtype_infer/: Main.snap
tests-integration/fixtures/checking/1771864380_data_check/: Main.snap
tests-integration/fixtures/checking/1771864440_data_infer/: Main.snap
tests-integration/fixtures/checking/1771869960_synonym_check/: Main.snap
tests-integration/fixtures/checking/1771918140_synonym_infer/: Main.snap
tests-integration/fixtures/checking/1771923300_class_check/: Main.snap
tests-integration/fixtures/checking/1771923420_class_superclass/: Main.snap
tests-integration/fixtures/checking/1771923480_class_polykind_check/: Main.snap
tests-integration/fixtures/checking/1771923540_class_polykind_infer/: Main.snap
tests-integration/fixtures/checking/1771935300_operator_alias_kind/: Main.snap
tests-integration/fixtures/checking/1771935360_operator_alias_invalid_kind/: Main.snap
tests-integration/fixtures/checking/1772011200_type_operator_chain_infer/: Main.snap
tests-integration/fixtures/checking/1772011260_type_operator_chain_check/: Main.snap
tests-integration/fixtures/checking/1772011320_type_operator_chain_polykind/: Main.snap
tests-integration/fixtures/checking/1772011380_type_operator_chain_precedence/: Main.snap
tests-integration/fixtures/checking/1772011440_type_operator_chain_kind_error/: Main.snap
tests-integration/fixtures/checking/1772011500_operator_check/: Main.snap
tests-integration/fixtures/checking/1772011560_role_inference_phantom/: Main.snap
tests-integration/fixtures/checking/1772011620_role_inference_representational/: Main.snap
tests-integration/fixtures/checking/1772011680_role_inference_nominal_parametric/: Main.snap
tests-integration/fixtures/checking/1772011740_role_declaration_strengthen/: Main.snap
tests-integration/fixtures/checking/1772011800_role_declaration_loosen_error/: Main.snap
tests-integration/fixtures/checking/1772011860_role_declaration_foreign/: Main.snap
tests-integration/fixtures/checking/1772011920_foreign_check/: Main.snap
tests-integration/fixtures/checking/1772011980_value_check/: Main.snap
tests-integration/fixtures/checking/1772045820_exhaustive_case_infer/: Main.snap
tests-integration/fixtures/checking/1772045880_exhaustive_case_redundant/: Main.snap
tests-integration/fixtures/checking/1772045940_exhaustive_equation_signature/: Main.snap
tests-integration/fixtures/checking/1772046000_exhaustive_guards_otherwise/: Main.snap
tests-integration/fixtures/checking/1772046060_exhaustive_let_pattern/: Main.snap
tests-integration/fixtures/checking/1772046120_exhaustive_operator_constructor/: Main.snap
tests-integration/fixtures/checking/1772088540_synonym_partial_defer/: Main.snap
tests-integration/fixtures/checking/1772108280_value_recursive_check/: Main.snap
tests-integration/fixtures/checking/1772108340_value_recursive_infer/: Main.snap
tests-integration/fixtures/checking/1772108400_value_mutual_check/: Main.snap
tests-integration/fixtures/checking/1772108460_value_mutual_infer/: Main.snap
tests-integration/fixtures/checking/1772108520_data_mutual_check/: Main.snap
tests-integration/fixtures/checking/1772108580_data_mutual_infer/: Main.snap
tests-integration/fixtures/checking/1772140680_instance_check/: Main.snap
tests-integration/fixtures/checking/1772301720_instance_constraint_solving/: Main.snap
tests-integration/fixtures/checking/1772301780_instance_functional_dependency/: Main.snap
tests-integration/fixtures/checking/1772301840_instance_given_constraint/: Main.snap
tests-integration/fixtures/checking/1772301900_instance_constraint_generalization/: Main.snap
tests-integration/fixtures/checking/1772304660_given_constraint_let_check/: Main.snap
tests-integration/src/: fixtures.rs  generated.rs  lib.rs
tests-integration/tests/: checking.rs  docs.rs  elaborating.rs  formatting.rs  lowering.rs  lowering_unit.rs  lsp.rs  resolving.rs  semantic.rs
tests-integration/tests/snapshots/: lowering_unit__ado_fn_not_in_scope.snap  lowering_unit__basic_cycle.snap  lowering_unit__do_fn_not_in_scope.snap  lowering_unit__negate_not_in_scope.snap  lowering_unit__non_cycle_ordering.snap  lowering_unit__non_recursive_kinds.snap  lowering_unit__operator_cycle.snap  lowering_unit__recursive_kinds_errors.snap  lowering_unit__recursive_synonym_errors.snap
(+842 files in other folders)
