[package]
name = "purescript-alexandrite"
version = "0.0.12"
edition = "2024"
authors = ["Justin Garcia <git@purefunctor.me>"]
license = "BSD-3-Clause"
description = "Language implementation for the PureScript programming language."
readme = "../README.md"
homepage = "https://github.com/purefunctor/purescript-alexandrite"
repository = "https://github.com/purefunctor/purescript-alexandrite"
keywords = ["purescript", "language server"]
categories = ["compilers"]

[features]
default = []
no-tracing = ["tracing/max_level_off"]

[[bin]]
name = "purescript-alexandrite"
path = "src/bin/purescript-alexandrite.rs"

[[bin]]
name = "purescript-analyzer"
path = "src/bin/purescript-analyzer.rs"

[dependencies]
diagnostics = { version = "0.1.0", path = "../compiler-core/diagnostics" }
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
files = { version = "0.1.0", path = "../compiler-core/files" }
globset = "0.4.18"
indexing = { version = "0.1.0", path = "../compiler-core/indexing" }
itertools = "0.14.0"
lowering = { version = "0.1.0", path = "../compiler-core/lowering" }
parking_lot = "0.12.5"
path-absolutize = "3.1.1"
radix_trie = "0.3.0"
resolving = { version = "0.1.0", path = "../compiler-core/resolving" }
rowan = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
spago = { version = "0.1.0", path = "../compiler-lsp/spago" }
stabilizing = { version = "0.1.0", path = "../compiler-core/stabilizing" }
syntax = { version = "0.1.0", path = "../compiler-core/syntax" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.45.1"

[target.'cfg(not(unix))'.dependencies]
tokio-util = { version = "0.7.17", features = ["compat"] }
