[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
analyzer = { version = "0.1.0", path = "../compiler-lsp/analyzer" }
async-lsp = "0.2.2"
checking = { version = "0.1.0", path = "../compiler-core/checking" }
diagnostics = { version = "0.1.0", path = "../compiler-core/diagnostics" }
documentation = { version = "0.1.0", path = "../compiler-lsp/documentation" }
files = { version = "0.1.0", path = "../compiler-core/files" }
glob = "0.3.3"
indexing = { version = "0.1.0", path = "../compiler-core/indexing" }
interner = { version = "0.1.0", path = "../compiler-core/interner" }
itertools = "0.14.0"
insta = "1.45.1"
line-index = "0.1.2"
lowering = { version = "0.1.0", path = "../compiler-core/lowering" }
serde_json = "1.0"
stabilizing = { version = "0.1.0", path = "../compiler-core/stabilizing" }
sugar = { version = "0.1.0", path = "../compiler-core/sugar" }
syntax = { version = "0.1.0", path = "../compiler-core/syntax" }
tabled = "0.20.0"
url = "2.5.7"

[dev-dependencies]
datatest-stable = "0.3"

[[test]]
name = "checking"
harness = false

[[test]]
name = "lowering"
harness = false

[[test]]
name = "resolving"
harness = false

[[test]]
name = "lsp"
harness = false

[[test]]
name = "docs"
harness = false
