[package]
name = "documenting"
version = "0.1.0"
edition = "2024"

[dependencies]
indexing = { version = "0.1.0", path = "../indexing" }
parsing = { version = "0.1.0", path = "../parsing" }
rustc-hash = "2.1.2"
stabilizing = { version = "0.1.0", path = "../stabilizing" }
syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
criterion = "0.6.0"
insta = "1.45.1"
lexing = { path = "../lexing" }

[[bench]]
name = "documenting"
harness = false
