[package]
name = "syntax"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.17.1"
la-arena = "0.3.1"
parking_lot = "0.12.5"
paste = "1.0.15"
rustc-hash = "2.1.2"
syntree = "0.18.0"
text-size = "1.1.1"
